--- a/client/templates/client/connectors/client_connectors_list.html
+++ b/client/templates/client/connectors/client_connectors_list.html
@@ -273,14 +273,14 @@
                 </a>
 
                 {% if connector.debezium_status.state == 'RUNNING' %}
-                <form method="post" action="{% url 'cdc_connector_action' connector.id 'pause' %}" class="inline">
+                <form method="post" action="{% url 'connector_pause' connector.id %}" class="inline">
                   {% csrf_token %}
                   <button type="submit" class="text-orange-600 hover:text-orange-900 dark:text-orange-400 dark:hover:text-orange-300">
                     Pause
                   </button>
                 </form>
                 {% elif connector.debezium_status.state == 'PAUSED' %}
-                <form method="post" action="{% url 'cdc_connector_action' connector.id 'resume' %}" class="inline">
+                <form method="post" action="{% url 'connector_resume' connector.id %}" class="inline">
                   {% csrf_token %}
                   <button type="submit" class="text-green-600 hover:text-green-900 dark:text-green-400 dark:hover:text-green-300">
                     Resume
@@ -289,7 +289,7 @@
                 {% endif %}
 
                 {% if connector.debezium_status.state == 'FAILED' %}
-                <form method="post" action="{% url 'cdc_connector_action' connector.id 'restart' %}" class="inline">
+                <form method="post" action="{% url 'connector_restart' connector.id %}" class="inline">
                   {% csrf_token %}
                   <button type="submit" class="text-purple-600 hover:text-purple-900 dark:text-purple-400 dark:hover:text-purple-300">
                     Restart
